# web

./: .env.example  .gitignore  CNAME  Makefile  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml  deploy-pages.yml
assets/: index-BS8bz3wp.css  index-vqw5S9iR.js
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
frontend/api/: about.json  home.json  life-records.json  navigation.json  portfolio.json
frontend/src/: index.css  main.tsx
